<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#dcdcdc">
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center" android:background="#dcdcdc">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:id="@+id/logoImageView" android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/logo" android:layout_alignParentEnd="false" android:layout_row="0"
                    android:layout_column="0" android:layout_gravity="center_vertical" android:maxWidth="200dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginTop="20dp">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameEditText" android:layout_row="1" android:layout_column="0" android:hint="@string/Username"
                    android:singleLine="false" android:layout_gravity="center_horizontal"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordEditText" android:layout_row="2" android:layout_column="0"
                    android:hint="@string/Password" android:layout_gravity="center_horizontal"
                    android:inputType="textPassword"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LogIn"
                    android:id="@+id/loginButton" android:layout_column="0" android:layout_marginTop="20dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginTop="25dp">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customDomainURLEditText" android:layout_column="0" android:layout_gravity="center"
                    android:hint="@string/CustomDomainURL" android:textStyle="italic" android:inputType="textUri"
                    android:width="195dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginTop="20dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GetMoreInfo"
                    android:id="@+id/moreInfoTextView" android:layout_column="0" android:layout_gravity="center"
                    android:textStyle="bold"/>
        </TableRow>
    </TableLayout>
</FrameLayout>